# pjecz-hercules-api-oauth2

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: gcloud-app-deploy.yml
api/v1/: autoridades.py  distritos.py  materias.py  materias_tipos_juicios.py  modulos.py  permisos.py  roles.py  sentencias.py  usuarios.py  usuarios_roles.py
config/: settings.py
lib/: authentications.py  exceptions.py  fastapi_pagination_custom_page.py  schemas_base.py
models/: autoridad.py  distrito.py  materia.py  materia_tipo_juicio.py  sentencia.py  usuario.py
pjecz_hercules_api_oauth2/: main.py
pjecz_hercules_api_oauth2/config/: settings.py
pjecz_hercules_api_oauth2/dependencies/: authentications.py  database.py  google_cloud_storage.py  safe_string.py  universal_mixin.py
pjecz_hercules_api_oauth2/models/: autoridades.py  distrito.py  materias.py  materias_tipos_juicios.py  sentencia.py  usuario.py  usuarios.py
pjecz_hercules_api_oauth2/routers/: autoridades.py  distritos.py  edictos.py  listas_de_acuerdos.py  materias.py  materias_tipos_juicios.py  modulos.py  permisos.py  roles.py  sentencias.py  usuarios.py  usuarios_roles.py  web_paginas.py  web_ramas.py
pjecz_hercules_api_oauth2/schemas/: autoridad.py  autoridades.py  distrito.py  distritos.py  edictos.py  listas_de_acuerdos.py  materia.py  materia_tipo_juicio.py  materias_tipos_juicios.py  modulo.py  permiso.py  rol.py  roles.py  sentencia.py  sentencias.py  usuario.py  usuarios.py  usuarios_roles.py  web_paginas.py
schemas/: autoridad.py  distrito.py  materia.py  materia_tipo_juicio.py  modulo.py  permiso.py  rol.py  sentencia.py  usuario.py  usuario_rol.py
tests/: README.md  __init__.py  test_autoridades.py  test_distritos.py  test_edictos.py  test_listas_de_acuerdos.py  test_materias.py  test_materias_tipos_juicios.py  test_modulos.py  test_permisos.py  test_roles.py  test_sentencias.py  test_usuarios.py  test_usuarios_roles.py  test_web_paginas.py  test_web_ramas.py
