[tool.poetry]
name = "pjecz-hercules-api-oauth2"
version = "0.1.0"
description = "API de Plataforma Web con autentificación OAuth2"
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^44.0.0"
fastapi = {extras = ["sqlalchemy"], version = "^0.115.6"}
fastapi-pagination = "^0.12.34"
google-auth = "^2.37.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.22.0"
google-cloud-storage = "^2.19.0"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
faker = "^33.1.2"
isort = "^5.13.2"
poetry-plugin-export = "^1.8.0"
pre-commit = "^4.0.1"
pylint = "^3.3.3"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
